--- a/AllDianCan/build.gradle
+++ b/AllDianCan/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     repositories {
+        maven {
+            url('http://maven.aliyun.com/nexus/content/groups/public/')
+        }
         jcenter()
     }
     dependencies {
@@ -14,6 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url('http://maven.aliyun.com/nexus/content/groups/public/')
+        }
         jcenter()
+
     }
 }
