--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,21 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+#H5-pages ignore
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+/test/e2e/reports/
+selenium-debug.log
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
